modules/grammars/environment/src/test/resources/cocos/invalid/ValidatePort.ec
PACKAGE invalid

DOCKERFILE ValidatePort

EXPOSE 0
EXPOSE 70000